refactor: replace IllegalArgumentException with RequiredFieldException and InvalidFieldValueException in WorkshopServiceControllerTest